feat: upgrade to Spring Boot version 3